fix alignment/proportion issues

--- a/assets/index.css
+++ b/assets/index.css
@@ -45,9 +45,9 @@ li {
     height: 250px;
     width: 250px;
     background-color: antiquewhite;
-    position: absolute;
-    top: 90px;
-    left: 110px;
+    position: relative;
+    top: -270px;
+    left: 40px;
     border: solid black 2px;
     
 }
@@ -57,40 +57,43 @@ li {
    background-color: blue;
    position: relative;
    z-index: 2;
-   top: -250px;
-   left: 370px;
+   top: -450px;
+   left: 310px;
    color: white;
 }
 #clicky {
    position: relative;
    z-index: 2;
-   top: -300px;
-   left: -60px;
+   top: -500px;
+   left: -10px;
    font-weight: bold;
    font-family: 'ariel bold';
    border-color: blueviolet 5px;
 }
 #columnL {
-   display: inline-block;
+ display: inline-block;
  width: 328px;
  height: 100px;
  background-color: lightcoral;
  border: solid black 2px;
+ text-align: center;
  }
 
  #columnR {
-    display:inline-block;
+ display: inline-block;
  width: 512px; 
  height: 100px;
  background-color: brown; 
  border: solid black 2px;
+ text-align: center;
 }
 
 h3 {
    color: darkslategray;
 }
-
 #column-container {
-   width:850px;
-   margin:auto;
+   column-gap: 10px;
+   width: 850px;
+   margin: auto;
+   
 }
